--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	.tabPage { width: 900px; height: 470px; float: left; }
 </style>
 
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.12.0.min.js" ></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.0.min.js" ></script>
 	<script type="text/javascript">
 			function tabSetting() {
 				// 탭 컨텐츠 hide 후 현재 탭메뉴 페이지만 show
