--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
 		</div>
 		<div id="tabContent07" class="tabPage">
 			<br>&bull; Hyerim Lim, Hansol Ryu and Sukyung Park, Device of estimating human motion kinetics information and method of estimating human motion kinetics information, August 7, 2017</br>
+			<br>&bull; Hyerim Lim, Hyeob Choi, Myunghyun Lee and Sukyung Park, Scoliosis-prevention cushion and celluloid board with force sensor and vibrator, May 26, 2014</br>
 		</div>
 		<div id="tabContent08" class="tabPage">
 			<br>&bull; Visiting Student at Robotics Laboratory, NAVER LABS, Republic of Korea, January 2, 2018 - February 22, 2018</br>
