--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
 	<ul class="tab_Menu">
 	<font size = "5">
 		<li class="tabMenu current">
-			<a href="#tabContent01" >Research Intersts</a>
+			<a href="#tabContent01" >Research Interests</a>
 		</li>
 		<li class="tabMenu">
 			<a href="#tabContent02" >Education</a>
 		</li>
 		<li class="tabMenu">
-			<a href="#tabContent04" >Publication</a>
+			<a href="#tabContent04" >Publications</a>
 		</li>
 		<li class="tabMenu">
 			<a href="#tabContent05" >International Conference</a>
