--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<img src="image.jpg" weight = "250" height = "250" align = "left">
 <font size = "6" color = "#3C5087" face = "Gill Sans MT"> Hyerim Lim </br></font>
 <font size = "4.5" color = "#3C5087" face = "Gill Sans MT">
-<br>Research Engineer, Mechanical Engineering Research Institute, KAIST, Daejeon, Republic of Korea</br>
+<br>Postdoctoral Researcher, Mechanical Engineering, KAIST, Daejeon, Republic of Korea</br>
 <br>Phone: (82)-10-6670-6754</br>
 <br>Email: hyerimlim@kaist.ac.kr<br></font>
 <br></br>
