--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 			<br>&bull; B.S., Mechanical Engineering, KAIST (Feb, 2011)</br>
 		</div>
 		<div id="tabContent03" class="tabPage">
+			<br>&bull; Best Paper Award, the 2019 annual meeting of the Bioengineering division at Korea Society of Mechanical Engineering, Busan (2019)</br>
 			<br>&bull; GCORE Project for postdoc. Developing a smartphone healthcare system through the combination of dynamic walking model and machine learning. $ 114,000. 2018.09~2020.02 </br>
 			<br>&bull; Best Paper Award, the 10th annual meeting of the Bioengineering division at Korea Society of Mechanical Engineering, Daegu (2018)</br>
 			<br>&bull; Best Oral Presentation Award, the 7st International Biomedical Engineering Conference, Gyeongju (2015)</br>
@@ -124,14 +125,16 @@
 			<br>&bull; Scholarship awardee of Woodeok-Yundeokbyeong Foundation (2012)</br>
 		</div>
 		<div id="tabContent04" class="tabPage">
-			<br>&bull; Hyerim Lim, C. David Remy and Sukyung Park, A bipedal spring walking model emulates the dynamics of stance and swing leg (in preparation)</br>
-			<br>&bull; Hyerim Lim and Sukyung Park, Motion estimation of lower limb during walking form a single motion measurement based on SLIP characteristics (in preparation)</br>
 			<br>&bull; Hyerim Lim and Sukyung Park, Formulation of joint torques of lower limbs during walking that shares its CoM dynamics with spring mechanics (in preparation)</br>
-			<br>&bull; Hyerim Lim and Sukyung Park, Kinematics of lower limbs during walking are emulated by springy walking model with a compliantly connected, off-centered curvy foot, Journal of Biomechanics, Vol. 71, pp. 119-126, 2018, IF 2.431</br>
+			<br>&bull; Hyerim Lim and Sukyung Park, Strategy of walking on a treadmill changes from walking over the ground (in preparation)</br>
+			<br>&bull; Bumjoon Kim*, Hyerim Lim* and Sukyung Park, Prediction of the GRF from a single CoM measurement using gait dynamics implemented neural network, Journal of Biomechanics (submitted), * Equal contribution as co-first authors.</br>
+			<br>&bull; Hyerim Lim and Sukyung Park, A bipedal compliant walking model generates periodic gait cycles with realistic swing dynamics, Journal of Biomechanics, Vol. 91, pp. 79-84, 2019, IF 2.576</br>
+			<br>&bull; Hyerim Lim and Sukyung Park, Kinematics of lower limbs during walking are emulated by springy walking model with a compliantly connected, off-centered curvy foot, Journal of Biomechanics, Vol. 71, pp. 119-126, 2018, IF 2.576</br>
 			<br>&bull; Hyerim Lim, Heewon Park and Sukyung Park, Compliant walking model with a curvy foot reflection the position of ankle on reproducing the ankle torque profile, Journal of Mechanical Science and Technology, Vol. 29(6), pp. 2307-2311, 2015 IF 1.194</br>
 			<br>&bull; Hyerim Lim and Sukyung Park, Effect of Vision Coherent Sensory Cue on Roll Tilt Perception and Sensory Weighting, Journal of the Korean Society of Mechanical Engineering B, Vol.36(11), pp. 1091-1097, 2012</br>
 		</div>
 		<div id="tabContent05" class="tabPage">
+			<br>&bull; Hyerim Lim, Bumjoon Kim and Sukyung Park, The unmeasured motion estimation using a biomechanical model and machine learning (ML) hybrid method from a single measurement of the CoM acceleration from an IMU, Dynamic Walking, Canada, 2019
 			<br>&bull; Hyerim Lim, Myeong Sub Kim, Hyunho Jeon and Sukyung Park, Motion estimation of lower limb during walking from a single measurement based on SLIP characteristics, Dynamic Walking, USA, 2018 <a href="https://www.youtube.com/watch?v=7UCg7iVpMM0">(https://www.youtube.com/watch?v=7UCg7iVpMM0)</a></br>
 			<br>&bull; Hyerim Lim and Sukyung Park, Mechanical dominance of human walking through the dynamic analysis of lower limbs motions, Dynamic Walking, USA, 2018 <a href="https://www.youtube.com/watch?v=SwaJ6VIQESU">(https://www.youtube.com/watch?v=SwaJ6VIQESU)</a></br>
 			<br>&bull; Hyerim Lim and Sukyung Park, Estimation of unmeasured lower limb kinematics based on oscillatory CoM dynamics, Dynamic Walking, USA, 2016</br>
@@ -148,6 +151,8 @@
 			<br>&bull; Hyerim Lim, Sukyung Park, Influence of plantar tactile stimulus on roll tilt perception, the 6th International Symposium on Nature-Inspired Technology, Korea, 2012</br>
 		</div>
 		<div id="tabContent06" class="tabPage">
+			<br>&bull; Hyerim Lim, Bumjoon Kim and Sukyung Park, The body-centered coordinate enhances the estimation accuracy of ground reaction force using neural network, the 11th annual meeting of the Bioengineering division at Korea Society of Mechanical Engineering, Busan, 2019 </br>
+			<br>&bull; Hyunho Jung, Hyerim Lim and Sukyung Park, Motion estimation of lower limb during walking based on SLIP characteristics using an unconstrained single camera, the 10th annual meeting of the Bioengineering division at Korea Society of Mechanical Engineering, Daegu, 2018 </br>
 			<br>&bull; Myeong Sub Kim, Hyerim Lim and Sukyung Park, Estimation of Multi-Joint Motion Using a Single IMU Sensor based on Dynamic Characteristics during Walking, the 10th annual meeting of the Bioengineering division at Korea Society of Mechanical Engineering, Daegu, 2018 </br>
 			<br>&bull; Hyerim Lim and Sukyung Park, Compliant walking model can reproduce foot trajectory of full gait cycle, 2017 Korea Society of Mechanical Engineering, Jeju, 2017</br>
 			<br>&bull; Hyerim Lim and Sukyung Park, A springy bipedal walking model that demonstrates the kinetics of full gait cycle, the 9th annual meeting of the Bioengineering division at Korea Society of Mechanical Engineering, Daejeon, 2017</br>
@@ -158,8 +163,8 @@
 			<br>&bull; Hyerim Lim and Sukyung Park, Additional sensory information changes roll tilt perception, the 4th annual meeting of the Bioengineering division at Korea Society of Mechanical Engineering, Gwangju, 2012</br>
 		</div>
 		<div id="tabContent07" class="tabPage">
+			<br>&bull; Hyerim Lim, Hyunho Jeong and Sukyung Park, Method and apparatus for estimating human motion kinetics information, January 24, 2019 (filed)</br>
 			<br>&bull; Hyerim Lim, Hansol Ryu and Sukyung Park, Device of estimating human motion kinetics information and method of estimating human motion kinetics information, August 7, 2017</br>
-			<br>&bull; Hyerim Lim, Hyeob Choi, Myunghyun Lee and Sukyung Park, Scoliosis-prevention cushion and celluloid board with force sensor and vibrator, May 26, 2014</br>
 		</div>
 		<div id="tabContent08" class="tabPage">
 			<br>&bull; Visiting Student at Robotics Laboratory, NAVER LABS, Republic of Korea, January 2, 2018 - February 22, 2018</br>
